{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 64,
  "lineage": "8525bb2d-9cbe-5fdf-a778-f7afedb1e842",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-003bfe784adb28d3b",
            "domain": "vpc",
            "id": "eipalloc-0a75d6c06463ec43a",
            "instance": "i-0e63934ce10caf0f1",
            "network_interface": "eni-005bcfc74ae5387e0",
            "private_dns": "ip-10-0-1-50.eu-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-157-218-51.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.218.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_network_interface.network_interface",
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c148bb835696b45",
            "arn": "arn:aws:ec2:eu-central-1:251948864569:instance/i-0e63934ce10caf0f1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e63934ce10caf0f1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-005bcfc74ae5387e0"
              }
            ],
            "primary_network_interface_id": "eni-005bcfc74ae5387e0",
            "private_dns": "ip-10-0-1-50.eu-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "18.157.218.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0468a23dfeff0a057",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e0f8d7d475b346f",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02f6a625e90038e64"
            ]
          },
          "dependencies": [
            "aws_network_interface.network_interface",
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:251948864569:internet-gateway/igw-0901af02efc9d21ce",
            "id": "igw-0901af02efc9d21ce",
            "owner_id": "251948864569",
            "vpc_id": "vpc-05d85175c54c70f7c"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-08974c4f4fadfe778",
                "device_index": 0,
                "instance": "i-0e63934ce10caf0f1"
              }
            ],
            "id": "eni-005bcfc74ae5387e0",
            "mac_address": "02:6c:3f:2d:15:f6",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02f6a625e90038e64"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e0f8d7d475b346f"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.public_subnet",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be423c745d9fb6aa",
            "owner_id": "251948864569",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0901af02efc9d21ce",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0901af02efc9d21ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod"
            },
            "vpc_id": "vpc-05d85175c54c70f7c"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03149585ccaff417a",
            "route_table_id": "rtb-0be423c745d9fb6aa",
            "subnet_id": "subnet-02e0f8d7d475b346f"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:251948864569:security-group/sg-02f6a625e90038e64",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f6a625e90038e64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "251948864569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d85175c54c70f7c"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:251948864569:subnet/subnet-02e0f8d7d475b346f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02e0f8d7d475b346f",
            "map_public_ip_on_launch": false,
            "owner_id": "251948864569",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-05d85175c54c70f7c"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:251948864569:vpc/vpc-05d85175c54c70f7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0c88ffdece937bf",
            "default_route_table_id": "rtb-01aaa882870eb7c35",
            "default_security_group_id": "sg-0d11b97f5339fb88b",
            "dhcp_options_id": "dopt-82f4e3e9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05d85175c54c70f7c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01aaa882870eb7c35",
            "owner_id": "251948864569",
            "tags": {
              "Name": "prod"
            }
          }
        }
      ]
    }
  ]
}